# captcha

./: .gitignore  Cargo.toml  README.md
captcha/: Cargo.toml
captcha-web/: Cargo.toml
captcha-web/src/: main.rs
captcha/src/: lib.rs
